--- a/Petz/pom.xml
+++ b/Petz/pom.xml
@@ -66,6 +66,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>stoom-petz-docker</finalName>
 	</build>
 
 </project>
